# Daedalus-Agent

./: .gitignore  LICENSE  README.md  config.example.yml  pyproject.toml
daedalus/: __init__.py  __main__.py  agent.py  identity.py  lint.py  llm_config.py  llm_presets.py  model_registry.py  preset_library.py  proposals.py  sandbox.py  storage.py  tdd.py  workers.py
examples/fastapi_integration/: main.py
examples/simple_coding_agent/: run.py
examples/tdd_standalone/: run.py
